--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -1,2 +1,7 @@
 @import "./scss/base";
+@import "./scss/navbar";
+@import "./scss/header";
+@import "./scss/features";
+@import "./scss/cta";
+@import "./scss/footer2";
 @import "./scss/footer";
