--- a/src/style/App.css
+++ b/src/style/App.css
@@ -22,6 +22,74 @@ h4 {
   font-family: "DM Serif Display", serif;
 }
 
+h1 {
+  font-size: 4.8rem;
+  line-height: 4.8rem;
+  font-weight: 400;
+  letter-spacing: -0.666667px;
+}
+@media (min-width: 1110px) {
+  h1 {
+    font-size: 7.2rem;
+    line-height: 6.4rem;
+    letter-spacing: -1px;
+  }
+}
+
+h2 {
+  font-size: 4.8rem;
+  line-height: 4.8rem;
+  font-weight: 400;
+  letter-spacing: -0.666667px;
+}
+@media (min-width: 1110px) {
+  h2 {
+    font-size: 7.2rem;
+    line-height: 6.4rem;
+    letter-spacing: -1px;
+  }
+}
+
+h3 {
+  font-weight: 400;
+  font-size: 4rem;
+  line-height: 4rem;
+  letter-spacing: -0.555556px;
+}
+@media (min-width: 1110px) {
+  h3 {
+    font-style: 5.6rem;
+    line-height: 5.6rem;
+    letter-spacing: -0.777778px;
+  }
+}
+
+h4 {
+  font-size: 2.8rem;
+  line-height: 3.8rem;
+  font-weight: 400;
+  letter-spacing: -0.388889px;
+}
+
+p {
+  font-size: 1.6rem;
+  line-height: 2.6rem;
+  font-weight: 400;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
