--- a/src/style/scss/_base.scss
+++ b/src/style/scss/_base.scss
@@ -5,10 +5,28 @@ $color-violet-dark: #2b272f;
 $color-grayish-violet: #837d87;
 $color-gray-light: #fafafa;
 
+// Font sizes
+$fs-300: 1.3rem;
+$fs-400: 1.6rem;
+$fs-500: 2.8rem;
+$fs-600: 4rem;
+$fs-700: 4.8rem;
+$fs-800: 5.6rem;
+$fs-900: 7.2rem;
+$fw-regular: 400;
+$fw-bold: 700;
+
+// Margins
+$mar-100: 1.6rem;
+$mar-200: 2.4rem;
+$mar-300: 3.2rem;
+$mar-400: 5.6rem;
+$mar-500: 8rem;
+
 // Media
 @mixin respond($breakpoint) {
   @if $breakpoint == desktop {
-    @media (min-width: 768px) {
+    @media (min-width: 1110px) {
       @content;
     }
   }
@@ -36,4 +54,67 @@ h2,
 h3,
 h4 {
   font-family: "DM Serif Display", serif;
+}
+
+h1 {
+  font-size: $fs-700;
+  line-height: 4.8rem;
+  font-weight: $fw-regular;
+  letter-spacing: -0.666667px;
+  @include respond(desktop) {
+    font-size: $fs-900;
+    line-height: 6.4rem;
+    letter-spacing: -1px;
+  }
+}
+
+h2 {
+  font-size: $fs-700;
+  line-height: 4.8rem;
+  font-weight: $fw-regular;
+  letter-spacing: -0.666667px;
+  @include respond(desktop) {
+    font-size: $fs-900;
+    line-height: 6.4rem;
+    letter-spacing: -1px;
+  }
+}
+
+h3 {
+  font-weight: $fw-regular;
+  font-size: $fs-600;
+  line-height: 4rem;
+  letter-spacing: -0.555556px;
+
+  @include respond(desktop) {
+    font-style: $fs-800;
+    line-height: 5.6rem;
+    letter-spacing: -0.777778px;
+  }
+}
+
+h4 {
+  font-size: $fs-500;
+  line-height: 3.8rem;
+  font-weight: $fw-regular;
+  letter-spacing: -0.388889px;
+}
+
+p {
+  font-size: $fs-400;
+  line-height: 2.6rem;
+  font-weight: $fw-regular;
+}
+
+ul,
+li {
+  list-style: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+button {
+  cursor: pointer;
 }
