--- a/src/style/App.css
+++ b/src/style/App.css
@@ -13,6 +13,7 @@ html {
 
 body {
   font-family: "Karla", sans-serif;
+  position: relative;
 }
 
 h1,
@@ -88,6 +89,58 @@ a {
 
 button {
   cursor: pointer;
+  font-family: "Karla", sans-serif;
+}
+
+.header {
+  position: -webkit-sticky;
+  position: sticky;
+}
+.header__topbar {
+  display: grid;
+  grid-template-columns: repeat(2, -webkit-max-content);
+  grid-template-columns: repeat(2, max-content);
+  justify-content: space-between;
+  margin: 2.4rem;
+  z-index: 1;
+}
+.header__topbar--menu {
+  cursor: pointer;
+}
+.header__nav--items {
+  position: absolute;
+  text-align: center;
+  right: -100%;
+  background-color: #2c2830;
+  width: 100vw;
+  height: 100vh;
+  transition: all 0.2s;
+}
+.header__nav--items-item {
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 4rem;
+  letter-spacing: 1.36px;
+  margin: 2.4rem;
+}
+.header__nav--items-item a {
+  color: white;
+}
+.header__nav--items-item button {
+  width: 100%;
+  max-width: 32.7rem;
+  height: 5.6rem;
+  border: 1px solid white;
+  background-color: transparent;
+  color: white;
+  font-size: 2rem;
+  font-weight: 700;
+  line-height: 4rem;
+  letter-spacing: 1.36px;
+}
+
+.menuOpen {
+  right: 0;
 }
 
 .attribution {
