--- a/src/style/App.css
+++ b/src/style/App.css
@@ -95,14 +95,16 @@ button {
 .header {
   position: -webkit-sticky;
   position: sticky;
+  top: 0;
 }
 .header__topbar {
   display: grid;
   grid-template-columns: repeat(2, -webkit-max-content);
   grid-template-columns: repeat(2, max-content);
   justify-content: space-between;
-  margin: 2.4rem;
-  z-index: 1;
+  align-items: center;
+  padding: 2.4rem;
+  background-color: white;
 }
 .header__topbar--menu {
   cursor: pointer;
@@ -114,7 +116,7 @@ button {
   background-color: #2c2830;
   width: 100vw;
   height: 100vh;
-  transition: all 0.2s;
+  transition: all 0.3s ease-in-out;
 }
 .header__nav--items-item {
   font-size: 2rem;
