--- a/src/style/scss/_header.scss
+++ b/src/style/scss/_header.scss
@@ -1,11 +1,13 @@
 .header {
   position: sticky;
+  top: 0;
   &__topbar {
     display: grid;
     grid-template-columns: repeat(2, max-content);
     justify-content: space-between;
-    margin: 2.4rem;
-    z-index: 1;
+    align-items: center;
+    padding: 2.4rem;
+    background-color: white;
     &--logo {
       &-img {
       }
@@ -24,7 +26,7 @@
       background-color: #2c2830;
       width: 100vw;
       height: 100vh;
-      transition: all 0.2s;
+      transition: all 0.3s ease-in-out;
       &-item {
         font-size: 2rem;
         font-weight: $fw-bold;
