--- a/src/style/App.css
+++ b/src/style/App.css
@@ -92,6 +92,10 @@ button {
   font-family: "Karla", sans-serif;
 }
 
+.container {
+  overflow: hidden;
+}
+
 .header {
   position: -webkit-sticky;
   position: sticky;
