--- a/src/style/scss/_header.scss
+++ b/src/style/scss/_header.scss
@@ -8,6 +8,7 @@
     align-items: center;
     padding: 2.4rem;
     background-color: white;
+
     &--logo {
       &-img {
       }
@@ -20,7 +21,7 @@
   }
   &__nav {
     &--items {
-      position: absolute;
+      position: fixed;
       text-align: center;
       right: -100%;
       background-color: #2c2830;
