--- a/src/style/App.css
+++ b/src/style/App.css
@@ -13,7 +13,6 @@ html {
 
 body {
   font-family: "Karla", sans-serif;
-  position: relative;
 }
 
 h1,
@@ -113,7 +112,10 @@ button {
   position: fixed;
   text-align: center;
   right: -100%;
-  background-color: #2c2830;
+  top: 8rem;
+  background: url("../images/bg-pattern-mobile-nav.svg") no-repeat, #2c2830;
+  background-position: bottom 0 left 0;
+  background-size: 100%;
   width: 100vw;
   height: 100vh;
   transition: all 0.3s ease-in-out;
