--- a/src/style/scss/_header.scss
+++ b/src/style/scss/_header.scss
@@ -24,7 +24,10 @@
       position: fixed;
       text-align: center;
       right: -100%;
-      background-color: #2c2830;
+      top: 8rem;
+      background: url("../images/bg-pattern-mobile-nav.svg") no-repeat, #2c2830;
+      background-position: bottom 0 left 0;
+      background-size: 100%;
       width: 100vw;
       height: 100vh;
       transition: all 0.3s ease-in-out;
