--- a/src/style/App.css
+++ b/src/style/App.css
@@ -95,6 +95,7 @@ button {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
+  z-index: 2;
 }
 .header__topbar {
   display: grid;
@@ -145,6 +146,46 @@ button {
 
 .menuOpen {
   right: 0;
+}
+
+.hero {
+  background-color: #2d2640;
+  color: white;
+  text-align: center;
+}
+.hero__hero--img {
+  width: 100vw;
+  height: 45.1rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.hero__content {
+  padding: 9.3rem 2.4rem;
+  position: relative;
+  z-index: 1;
+}
+.hero__content--headline {
+  margin-bottom: 1.6rem;
+}
+.hero__content--text {
+  margin-bottom: 3.2rem;
+}
+.hero__content--btn {
+  width: 14.6rem;
+  height: 4rem;
+  color: white;
+  background-color: transparent;
+  border: 1px solid white;
+}
+.hero__bg-patterns--right {
+  position: absolute;
+  right: 0;
+  top: 88rem;
+}
+.hero__bg-patterns--left {
+  position: absolute;
+  left: 0;
+  top: 53.3rem;
 }
 
 .attribution {
