--- a/src/style/App.css
+++ b/src/style/App.css
@@ -204,7 +204,7 @@ button {
   margin-bottom: 8rem;
   color: #2c2830;
 }
-.features__item {
+.features__item:not(:last-child) {
   margin-bottom: 5.6rem;
 }
 .features__item--icon {
@@ -216,6 +216,25 @@ button {
 }
 .features__item--text {
   color: #837d87;
+}
+
+.cta {
+  background: url("../images/bg-pattern-how-we-work-mobile.svg") no-repeat, #2d2640;
+  background-position: top 0 right 0;
+  padding: 7.2rem 2.4rem;
+  margin-inline: 2.4rem;
+  margin-bottom: 14rem;
+}
+.cta__headline {
+  color: white;
+  margin-bottom: 4rem;
+}
+.cta__btn {
+  background-color: transparent;
+  color: white;
+  border: 1px solid white;
+  width: 16rem;
+  height: 4rem;
 }
 
 .attribution {
