--- a/src/style/App.css
+++ b/src/style/App.css
@@ -237,6 +237,56 @@ button {
   height: 4rem;
 }
 
+.footer {
+  background: url("../images/bg-pattern-footer-mobile.svg") no-repeat, #fafafa;
+  background-position: top 0 right 0;
+  padding: 8.8rem 2.4rem;
+}
+.footer__topbar--logo {
+  margin-bottom: 3.2rem;
+}
+.footer__topbar--social {
+  display: grid;
+  grid-template-columns: repeat(4, -webkit-max-content);
+  grid-template-columns: repeat(4, max-content);
+  justify-content: center;
+  align-items: center;
+  gap: 1.6rem;
+}
+.footer__topbar--social-icon {
+  height: 2.4rem;
+  width: 2.4rem;
+  fill: #837d87;
+}
+.footer__separator {
+  height: 1px;
+  width: 100%;
+  background-color: #dadada;
+  margin-block: 4rem;
+}
+.footer__nav--headline {
+  color: #837d87;
+  margin-bottom: 3.6rem;
+  font-size: 1.3rem;
+  font-weight: 700;
+  line-height: 1.5rem;
+  letter-spacing: 1.5px;
+}
+.footer__nav--row-list {
+  margin-bottom: 4rem;
+}
+.footer__nav--row-list-item {
+  font-size: 1.3rem;
+  font-weight: 700;
+  line-height: 1.5rem;
+  letter-spacing: 1.5px;
+  color: #2d2640;
+  margin-bottom: 1.6rem;
+}
+.footer__nav--row-list-item a:visited {
+  color: #2d2640;
+}
+
 .attribution {
   font-size: 11px;
   text-align: center;
