--- a/src/style/App.css
+++ b/src/style/App.css
@@ -94,12 +94,29 @@ button {
 .container {
   text-align: center;
 }
+@media (min-width: 1110px) {
+  .container {
+    text-align: left;
+  }
+}
 
 .header {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
   z-index: 2;
+}
+@media (min-width: 1110px) {
+  .header {
+    position: relative;
+    z-index: 0;
+    display: grid;
+    grid-template-columns: repeat(2, -webkit-max-content);
+    grid-template-columns: repeat(2, max-content);
+    align-items: center;
+    justify-content: space-between;
+    margin: 2rem 16.5rem;
+  }
 }
 .header__topbar {
   display: grid;
@@ -110,8 +127,19 @@ button {
   padding: 2.4rem;
   background-color: white;
 }
+@media (min-width: 1110px) {
+  .header__topbar {
+    display: block;
+    padding: 0;
+  }
+}
 .header__topbar--menu {
   cursor: pointer;
+}
+@media (min-width: 1110px) {
+  .header__topbar--menu {
+    display: none;
+  }
 }
 .header__nav--items {
   position: fixed;
@@ -124,6 +152,21 @@ button {
   height: 100vh;
   transition: all 0.3s ease-in-out;
 }
+@media (min-width: 1110px) {
+  .header__nav--items {
+    position: relative;
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background: none;
+    display: grid;
+    grid-template-columns: repeat(4, -webkit-max-content);
+    grid-template-columns: repeat(4, max-content);
+    align-items: center;
+    gap: 2.4rem;
+  }
+}
 .header__nav--items-item {
   font-size: 2rem;
   font-weight: 700;
@@ -131,8 +174,25 @@ button {
   letter-spacing: 1.36px;
   margin: 2.4rem;
 }
+@media (min-width: 1110px) {
+  .header__nav--items-item {
+    margin: 0;
+    font-size: 1.3rem;
+    line-height: 1.5rem;
+    letter-spacing: 1.5px;
+  }
+}
 .header__nav--items-item a {
   color: white;
+}
+@media (min-width: 1110px) {
+  .header__nav--items-item a {
+    color: #837d87;
+    transition: all 0.2s;
+  }
+  .header__nav--items-item a:hover {
+    color: #2c2830;
+  }
 }
 .header__nav--items-item button {
   width: 100%;
@@ -145,6 +205,22 @@ button {
   font-weight: 700;
   line-height: 4rem;
   letter-spacing: 1.36px;
+}
+@media (min-width: 1110px) {
+  .header__nav--items-item button {
+    color: #2c2830;
+    border: 1px solid #2c2830;
+    width: 14.6rem;
+    height: 4rem;
+    font-size: 1.3rem;
+    line-height: 1.5rem;
+    letter-spacing: 1.5px;
+    transition: all 0.2s;
+  }
+  .header__nav--items-item button:hover {
+    color: white;
+    background-color: #2c2830;
+  }
 }
 
 .menuOpen {
