--- a/src/style/scss/_header.scss
+++ b/src/style/scss/_header.scss
@@ -2,6 +2,17 @@
   position: sticky;
   top: 0;
   z-index: 2;
+
+  @include respond(desktop) {
+    position: relative;
+    z-index: 0;
+    display: grid;
+    grid-template-columns: repeat(2, max-content);
+    align-items: center;
+    justify-content: space-between;
+    margin: 2rem 16.5rem;
+  }
+
   &__topbar {
     display: grid;
     grid-template-columns: repeat(2, max-content);
@@ -10,8 +21,17 @@
     padding: 2.4rem;
     background-color: white;
 
+    @include respond(desktop) {
+      display: block;
+      padding: 0;
+    }
+
     &--menu {
       cursor: pointer;
+
+      @include respond(desktop) {
+        display: none;
+      }
     }
   }
   &__nav {
@@ -25,14 +45,44 @@
       width: 100vw;
       height: 100vh;
       transition: all 0.3s ease-in-out;
+
+      @include respond(desktop) {
+        position: relative;
+        right: 0;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        background: none;
+        display: grid;
+        grid-template-columns: repeat(4, max-content);
+        align-items: center;
+        gap: 2.4rem;
+      }
+
       &-item {
         font-size: 2rem;
         font-weight: $fw-bold;
         line-height: 4rem;
         letter-spacing: 1.36px;
         margin: 2.4rem;
+
+        @include respond(desktop) {
+          margin: 0;
+          font-size: 1.3rem;
+          line-height: 1.5rem;
+          letter-spacing: 1.5px;
+        }
         & a {
           color: white;
+
+          @include respond(desktop) {
+            color: $color-grayish-violet;
+            transition: all 0.2s;
+
+            &:hover {
+              color: #2c2830;
+            }
+          }
         }
         & button {
           width: 100%;
@@ -45,6 +95,22 @@
           font-weight: $fw-bold;
           line-height: 4rem;
           letter-spacing: 1.36px;
+
+          @include respond(desktop) {
+            color: #2c2830;
+            border: 1px solid #2c2830;
+            width: 14.6rem;
+            height: 4rem;
+            font-size: 1.3rem;
+            line-height: 1.5rem;
+            letter-spacing: 1.5px;
+            transition: all 0.2s;
+
+            &:hover {
+              color: white;
+              background-color: #2c2830;
+            }
+          }
         }
       }
     }
