--- a/src/style/App.css
+++ b/src/style/App.css
@@ -109,7 +109,6 @@ button {
 @media (min-width: 1110px) {
   .header {
     position: relative;
-    z-index: 0;
     display: grid;
     grid-template-columns: repeat(2, -webkit-max-content);
     grid-template-columns: repeat(2, max-content);
@@ -231,22 +230,73 @@ button {
   background-color: #2d2640;
   color: white;
 }
+@media (min-width: 1110px) {
+  .hero {
+    position: relative;
+    margin-bottom: 30.5rem;
+  }
+}
+@media (min-width: 1110px) {
+  .hero__container {
+    display: grid;
+    grid-template-columns: repeat(2, -webkit-max-content);
+    grid-template-columns: repeat(2, max-content);
+    justify-content: center;
+    transform: translateY(10.5rem);
+    gap: 2rem;
+  }
+}
+@media (min-width: 1110px) {
+  .hero__hero {
+    grid-column: 2/3;
+  }
+}
 .hero__hero--img {
   width: 100vw;
   height: 45.1rem;
   -o-object-fit: cover;
      object-fit: cover;
 }
+@media (min-width: 1110px) {
+  .hero__hero--img {
+    width: 54rem;
+    height: auto;
+  }
+}
 .hero__content {
   padding: 9.3rem 2.4rem;
   position: relative;
   z-index: 1;
 }
+@media (min-width: 1110px) {
+  .hero__content {
+    grid-row: 1/2;
+    padding: 0;
+  }
+  .hero__content::before {
+    content: "";
+    display: block;
+    height: 1px;
+    width: 15rem;
+    background-color: #ffffff;
+    margin-bottom: 6.3rem;
+  }
+}
 .hero__content--headline {
   margin-bottom: 1.6rem;
 }
+@media (min-width: 1110px) {
+  .hero__content--headline {
+    max-width: 50rem;
+  }
+}
 .hero__content--text {
   margin-bottom: 3.2rem;
+}
+@media (min-width: 1110px) {
+  .hero__content--text {
+    max-width: 55rem;
+  }
 }
 .hero__content--btn {
   width: 14.6rem;
@@ -254,34 +304,82 @@ button {
   color: white;
   background-color: transparent;
   border: 1px solid white;
+  transition: all 0.2s;
+}
+.hero__content--btn:hover {
+  background-color: white;
+  color: #2c2830;
 }
 .hero__bg-patterns--right {
   position: absolute;
   right: 0;
   top: 88rem;
 }
+@media (min-width: 1110px) {
+  .hero__bg-patterns--right {
+    top: -8rem;
+    -webkit-clip-path: polygon(0 8rem, 100% 8rem, 100% 100%, 0 100%);
+            clip-path: polygon(0 8rem, 100% 8rem, 100% 100%, 0 100%);
+  }
+}
 .hero__bg-patterns--left {
   position: absolute;
   left: 0;
   top: 53.3rem;
 }
+@media (min-width: 1110px) {
+  .hero__bg-patterns--left {
+    top: 48.1rem;
+  }
+}
 
 .features {
   padding: 14rem 2.4rem;
 }
-.features__separator {
+@media (min-width: 1110px) {
+  .features {
+    padding: 0;
+    margin: 0 16.5rem 15.8rem;
+  }
+}
+.features::before {
+  content: "";
+  display: block;
   height: 1px;
   width: 15rem;
   margin: 0 auto;
   background-color: #c396c6;
   margin-bottom: 4rem;
 }
+@media (min-width: 1110px) {
+  .features::before {
+    margin: 0 0 6.4rem 0;
+  }
+}
+@media (min-width: 1110px) {
+  .features__container {
+    display: grid;
+    grid-template-columns: repeat(3, -webkit-max-content);
+    grid-template-columns: repeat(3, max-content);
+    gap: 3rem;
+  }
+}
 .features__headline {
   margin-bottom: 8rem;
   color: #2c2830;
 }
+@media (min-width: 1110px) {
+  .features__headline {
+    margin-bottom: 9.6rem;
+  }
+}
 .features__item:not(:last-child) {
   margin-bottom: 5.6rem;
+}
+@media (min-width: 1110px) {
+  .features__item {
+    max-width: 35rem;
+  }
 }
 .features__item--icon {
   margin-bottom: 3.2rem;
@@ -301,9 +399,28 @@ button {
   margin-inline: 2.4rem;
   margin-bottom: 14rem;
 }
+@media (min-width: 1110px) {
+  .cta {
+    display: grid;
+    grid-template-columns: repeat(2, -webkit-max-content);
+    grid-template-columns: repeat(2, max-content);
+    justify-content: space-between;
+    align-items: center;
+    padding: 7rem 8rem;
+    margin-inline: 16.5rem;
+    margin-bottom: 15rem;
+    background: url("../images/bg-pattern-how-we-work-desktop.svg") no-repeat, #2d2640;
+    background-position: top 0 right 0;
+  }
+}
 .cta__headline {
   color: white;
   margin-bottom: 4rem;
+}
+@media (min-width: 1110px) {
+  .cta__headline {
+    margin: 0;
+  }
 }
 .cta__btn {
   background-color: transparent;
@@ -311,6 +428,11 @@ button {
   border: 1px solid white;
   width: 16rem;
   height: 4rem;
+  transition: all 0.2s;
+}
+.cta__btn:hover {
+  background-color: white;
+  color: #2c2830;
 }
 
 .footer {
@@ -318,8 +440,29 @@ button {
   background-position: top 0 right 0;
   padding: 8.8rem 2.4rem;
 }
+@media (min-width: 1110px) {
+  .footer {
+    background: url("../images/bg-pattern-footer-desktop.svg") no-repeat, #fafafa;
+    background-position: top 0 left 0;
+    padding: 6.4rem 16.5rem;
+  }
+}
+@media (min-width: 1110px) {
+  .footer__topbar {
+    display: grid;
+    grid-template-columns: repeat(2, -webkit-max-content);
+    grid-template-columns: repeat(2, max-content);
+    justify-content: space-between;
+    align-items: center;
+  }
+}
 .footer__topbar--logo {
   margin-bottom: 3.2rem;
+}
+@media (min-width: 1110px) {
+  .footer__topbar--logo {
+    margin: 0;
+  }
 }
 .footer__topbar--social {
   display: grid;
@@ -334,12 +477,25 @@ button {
   width: 2.4rem;
   fill: #837d87;
   cursor: pointer;
+  transition: all 0.2s;
+}
+.footer__topbar--social-icon:hover {
+  fill: #2c2830;
 }
 .footer__separator {
   height: 1px;
   width: 100%;
   background-color: #dadada;
-  margin-block: 4rem;
+  margin-block: 3.2rem 4.8rem;
+}
+@media (min-width: 1110px) {
+  .footer__nav {
+    display: grid;
+    grid-template-columns: repeat(4, -webkit-max-content);
+    grid-template-columns: repeat(4, max-content);
+    justify-content: space-between;
+    max-width: 82%;
+  }
 }
 .footer__nav--headline {
   color: #837d87;
@@ -359,11 +515,16 @@ button {
   letter-spacing: 1.5px;
   color: #2d2640;
   margin-bottom: 1.6rem;
+  border: 1px solid transparent;
+  transition: all 0.2s;
 }
 .footer__nav--row-list-item a:visited,
 .footer__nav--row-list-item a:link,
 .footer__nav--row-list-item a:active {
   color: #2d2640;
+}
+.footer__nav--row-list-item:hover {
+  border-bottom: 1px solid #2d2640;
 }
 
 .attribution {
