--- a/src/style/scss/_cta.scss
+++ b/src/style/scss/_cta.scss
@@ -5,9 +5,25 @@
   padding: 7.2rem 2.4rem;
   margin-inline: $mar-200;
   margin-bottom: 14rem;
+
+  @include respond(desktop) {
+    display: grid;
+    grid-template-columns: repeat(2, max-content);
+    justify-content: space-between;
+    align-items: center;
+    padding: 7rem 8rem;
+    margin-inline: 16.5rem;
+    margin-bottom: 15rem;
+    background: url("../images/bg-pattern-how-we-work-desktop.svg") no-repeat,
+      $color--primary-violet;
+    background-position: top 0 right 0;
+  }
   &__headline {
     color: white;
     margin-bottom: 4rem;
+    @include respond(desktop) {
+      margin: 0;
+    }
   }
   &__btn {
     background-color: transparent;
@@ -15,5 +31,11 @@
     border: 1px solid white;
     width: 16rem;
     height: 4rem;
+    transition: all 0.2s;
+
+    &:hover {
+      background-color: white;
+      color: #2c2830;
+    }
   }
 }
