--- a/src/style/scss/_footer2.scss
+++ b/src/style/scss/_footer2.scss
@@ -3,9 +3,25 @@
     $color-gray-light;
   background-position: top 0 right 0;
   padding: 8.8rem 2.4rem;
+
+  @include respond(desktop) {
+    background: url("../images/bg-pattern-footer-desktop.svg") no-repeat,
+      $color-gray-light;
+    background-position: top 0 left 0;
+    padding: 6.4rem 16.5rem;
+  }
   &__topbar {
+    @include respond(desktop) {
+      display: grid;
+      grid-template-columns: repeat(2, max-content);
+      justify-content: space-between;
+      align-items: center;
+    }
     &--logo {
       margin-bottom: $mar-300;
+      @include respond(desktop) {
+        margin: 0;
+      }
     }
     &--social {
       display: grid;
@@ -18,6 +34,11 @@
         width: 2.4rem;
         fill: $color-grayish-violet;
         cursor: pointer;
+        transition: all 0.2s;
+
+        &:hover {
+          fill: #2c2830;
+        }
       }
     }
   }
@@ -25,9 +46,15 @@
     height: 1px;
     width: 100%;
     background-color: #dadada;
-    margin-block: 4rem;
+    margin-block: 3.2rem 4.8rem;
   }
   &__nav {
+    @include respond(desktop) {
+      display: grid;
+      grid-template-columns: repeat(4, max-content);
+      justify-content: space-between;
+      max-width: 82%;
+    }
     &--headline {
       color: $color-grayish-violet;
       margin-bottom: 3.6rem;
@@ -37,6 +64,8 @@
       letter-spacing: 1.5px;
     }
     &--row {
+      @include respond(desktop) {
+      }
       &-list {
         margin-bottom: 4rem;
         &-item {
@@ -46,11 +75,17 @@
           letter-spacing: 1.5px;
           color: $color--primary-violet;
           margin-bottom: $mar-100;
+          border: 1px solid transparent;
+          transition: all 0.2s;
 
           & a:visited,
           a:link,
           a:active {
             color: $color--primary-violet;
+          }
+
+          &:hover {
+            border-bottom: 1px solid $color--primary-violet;
           }
         }
       }
