--- a/src/style/App.css
+++ b/src/style/App.css
@@ -50,21 +50,21 @@ h2 {
   }
 }
 
-h3 {
+h4 {
   font-weight: 400;
   font-size: 4rem;
   line-height: 4rem;
   letter-spacing: -0.555556px;
 }
 @media (min-width: 1110px) {
-  h3 {
+  h4 {
     font-style: 5.6rem;
     line-height: 5.6rem;
     letter-spacing: -0.777778px;
   }
 }
 
-h4 {
+h3 {
   font-size: 2.8rem;
   line-height: 3.8rem;
   font-weight: 400;
@@ -234,6 +234,7 @@ button {
   .hero {
     position: relative;
     margin-bottom: 30.5rem;
+    height: 60rem;
   }
 }
 @media (min-width: 1110px) {
@@ -288,6 +289,7 @@ button {
 @media (min-width: 1110px) {
   .hero__content--headline {
     max-width: 50rem;
+    margin-bottom: 3.2rem;
   }
 }
 .hero__content--text {
@@ -329,7 +331,7 @@ button {
 }
 @media (min-width: 1110px) {
   .hero__bg-patterns--left {
-    top: 48.1rem;
+    top: 42.9rem;
   }
 }
 
